# techinsight

./: README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: main.py
backend/app/core/: config.py  db.py
backend/app/routers/: articles.py
backend/app/scripts/: import_articles.py
frontend/app/: page.tsx
