[project]
name = "techinsight-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.12.5",
  "pydantic-settings==2.10.1",
  "SQLAlchemy==2.0.37",
  "alembic==1.14.1",
  "asyncpg==0.30.0",
  "psycopg[binary]==3.2.5",
  "pgvector==0.3.6",
  "scikit-learn==1.5.1",
  "numpy==2.1.0",
]


[tool.setuptools]
packages = ["app"]
